fix(SmartDatePicker): adaptar cabecera del calendario a temas oscuros